2009-08-04  Alan McGovern  <amcgovern@novell.com>

	* ContentPresenter.cs: If ContentPresenter.Content was changed
	  from one primitive value to another primitive value (i.e.
	  non-UIElement) then the DataContext was not updated
	  correctly. The DataContext is now kept in sync with the
	  ContentProperty.

2009-07-29  Alan McGovern  <amcgovern@novell.com>

	* TextBox.cs:
	* Control.cs: An extra RaiseKeyDown method is unnecessary -
	  remove it and use InvokeKeyDown properly.

2009-07-29  Alan McGovern  <amcgovern@novell.com>

	* TextBox.cs:
	* Control.cs: 1) TextBox cannot hook into Key press events in
	  unmanaged code otherwise they never propagate to managed and
	  the user cannot intercept them. Instead of hooking to the
	  event in native code, just call native TextBox::OnKeyDown in
	  the managed override.
	2) Key press events are actually handled in two different
	  places. 'Navigation' keypresses like Left/Right/PgUp are
	  handled when the textbox OnKeyDown virtual method is
	  invoked. 'Character' keypresses like 'a', 'b', 'c' are
	  handled after the KeyDown event is emitted
	3) If a key press does not affect the textbox state (i.e.
	  pressing 'left' when the caret is already at the very left),
	  then the keypress is not handled.
	4) The KeyDown event is emitted even if OnKeyDown is overriden
	  and the base method is not invoked.
	5) The tab key should be interpreted as 'Focus next control'
	  only after the KeyDown event handlers have run and the key
	  press is not handled.

2009-07-28  Larry Ewing  <lewing@novell.com>

	* StackPanel.cs: remove uneeded alignment logic.

2009-07-26  Larry Ewing  <lewing@novell.com>

	* ComboBox.cs: set MaxHeight on the real child (hate this hack).
	
2009-07-26  Larry Ewing  <lewing@novell.com>

	* ComboBox.cs: use the new popup hack to handle the popup
	positioning.  Fixes DRT #556.

2009-07-23  Jeffrey Stedfast  <fejj@novell.com>

	* TextBox.cs (OnCursorPositionChanged): Added some special logic